# PCSC_fourier

./: .gitignore  .gitmodules  BMPInput.cpp  BMPInput.h  CMakeCache.txt  CMakeLists.txt  Doxyfile  Histogram.cpp  Histogram.h  Input.cpp  Input.h  Makefile  Output.cpp  README.md  Visualizer.cpp  Visualizer.h  WAVInput.cpp  WAVInput.h  cache.sqlite  cinz  cinz.pub  class-diagram.drawio  clean.sh  cmake_install.cmake  main.cpp  tests.cpp
.cmake/api/v1/reply/: cache-v2-bbff81cff56fe4dcbb66.json  cmakeFiles-v1-24f34e5ac41bc7722fff.json  cmakeFiles-v1-61973ad1440d311f52ed.json  codemodel-v2-6640c66c98497ab0fcc7.json  codemodel-v2-e078eb983a3493234f45.json  index-2024-11-29T10-50-46-0485.json  index-2024-12-07T11-56-30-0316.json  target-PCSC_fourier-Debug-0853545c04c7e36d8a86.json  target-PCSC_fourier-Debug-1e0164b9dd3b1a348929.json
lame-3.100/: config.status  libtool
lame-3.100/libmp3lame/: libmp3lame.la
lame-3.100/libmp3lame/.libs/: libmp3lame.lai
mpg123-1.32.8/: config.status  libmpg123.pc  libout123.pc  libsyn123.pc  libtool
mpg123-1.32.8/autom4te.cache/: output.1  output.2  requests  traces.0  traces.1
mpg123-1.32.8/local/lib/pkgconfig/: libsyn123.pc
mpg123-1.32.8/src/: config.h  mpg123  mpg123-id3dump  mpg123-strip  out123
mpg123-1.32.8/src/.deps/: audio.Po  common.Po  control_generic.Po  equalizer.Po  filters.Po  getlopt.Po  httpget.Po  local.Po  metaprint.Po  mpg123-id3dump.Po  mpg123-strip.Po  mpg123.Po  net123_exec.Po  out123.Po  playlist.Po  resolver.Po  streamdump.Po  sysutil.Po  term.Po  term_posix.Po
mpg123-1.32.8/src/.libs/: mpg123  mpg123-id3dump  mpg123-strip  out123
mpg123-1.32.8/src/compat/.deps/: compat.Plo  compat_dl.Plo  compat_str.Plo
mpg123-1.32.8/src/compat/.libs/: libcompat_dl.la
mpg123-1.32.8/src/libmpg123/: libmpg123.la
mpg123-1.32.8/src/libmpg123/.deps/: dct36_avx.Plo  dct36_x86_64.Plo  dct64_x86_64_float.Plo  getcpuflags_x86_64.Plo  libmpg123_la-dct64.Plo  libmpg123_la-dither.Plo  libmpg123_la-equalizer.Plo  libmpg123_la-feature.Plo  libmpg123_la-format.Plo  libmpg123_la-frame.Plo  libmpg123_la-icy.Plo  libmpg123_la-icy2utf8.Plo  libmpg123_la-id3.Plo  libmpg123_la-index.Plo  libmpg123_la-layer1.Plo  libmpg123_la-layer2.Plo  libmpg123_la-layer3.Plo  libmpg123_la-lfs_wrap.Plo  libmpg123_la-libmpg123.Plo  libmpg123_la-ntom.Plo  libmpg123_la-optimize.Plo  libmpg123_la-parse.Plo  libmpg123_la-readers.Plo  libmpg123_la-stringbuf.Plo  libmpg123_la-synth.Plo  libmpg123_la-synth_8bit.Plo  libmpg123_la-synth_real.Plo  libmpg123_la-synth_s32.Plo  libmpg123_la-tabinit.Plo  synth_stereo_avx_float.Plo  synth_stereo_x86_64_accurate.Plo  synth_stereo_x86_64_s32.Plo  synth_x86_64_accurate.Plo  synth_x86_64_float.Plo
mpg123-1.32.8/src/libmpg123/.libs/: libmpg123.lai  libmpg123.so.0.48.2
mpg123-1.32.8/src/libout123/: libout123.la
mpg123-1.32.8/src/libout123/.deps/: libout123_la-buffer.Plo  libout123_la-hextxt.Plo  libout123_la-libout123.Plo  libout123_la-stringlists.Plo  libout123_la-wav.Plo  libout123_la-xfermem.Plo  module.Plo
mpg123-1.32.8/src/libout123/.libs/: libout123.lai  libout123.so.0.5.1
mpg123-1.32.8/src/libout123/modules/: output_alsa.la  output_dummy.la  output_oss.la
mpg123-1.32.8/src/libout123/modules/.deps/: output_alsa_la-alsa.Plo  output_dummy_la-dummy.Plo  output_oss_la-oss.Plo
mpg123-1.32.8/src/libout123/modules/.libs/: output_alsa.lai  output_dummy.lai  output_oss.lai
mpg123-1.32.8/src/libsyn123/: libsyn123.la
mpg123-1.32.8/src/libsyn123/.deps/: libsyn123_la-filter.Plo  libsyn123_la-geiger.Plo  libsyn123_la-libsyn123.Plo  libsyn123_la-pinknoise.Plo  libsyn123_la-resample.Plo  libsyn123_la-sampleconv.Plo  libsyn123_la-volume.Plo
mpg123-1.32.8/src/libsyn123/.libs/: libsyn123.la  libsyn123.lai  libsyn123.so.0.2.3
src/: AudioExceptions.h  BMPInput.cpp  BMPInput.h  Bitmap.h  CSVOutput.cpp  CSVOutput.h  Fourier.cpp  Fourier.h  FourierExceptions.h  Histogram.cpp  Histogram.h  Image.h  ImageExceptions.h  Input.cpp  Input.h  MP3Input.cpp  MP3Input.h  MP3Output.cpp  MP3Output.h  Output.cpp  Output.h  PNGInput.cpp  PNGInput.h  PNGOutput.cpp  PNGOutput.h  SignalProcessor.h  Sound.h  Visualizer.cpp  Visualizer.h  WAVInput.cpp  WAVInput.h  main.cpp  test.cpp
src/ext_libraries/mpg123-1.32.8/: config.status
src/ext_libraries/mpg123-1.32.8/local/lib/pkgconfig/: libmpg123.pc  libout123.pc
src/ext_libraries/mpg123-1.32.8/src/: mpg123  mpg123-strip  out123
src/ext_libraries/mpg123-1.32.8/src/.deps/: common.Po  control_generic.Po  filters.Po  genre.Po  getlopt.Po  httpget.Po  local.Po  metaprint.Po  mpg123-id3dump.Po  mpg123-strip.Po  mpg123.Po  streamdump.Po  sysutil.Po  term.Po  term_posix.Po
src/ext_libraries/mpg123-1.32.8/src/.libs/: mpg123-strip
src/ext_libraries/mpg123-1.32.8/src/compat/.deps/: compat_dl.Plo  compat_str.Plo
src/ext_libraries/mpg123-1.32.8/src/libmpg123/.deps/: dct64_avx_float.Plo  libmpg123_la-dct64.Plo  libmpg123_la-dither.Plo  libmpg123_la-icy2utf8.Plo  libmpg123_la-index.Plo  libmpg123_la-layer1.Plo  libmpg123_la-layer2.Plo  libmpg123_la-lfs_wrap.Plo  libmpg123_la-optimize.Plo  libmpg123_la-parse.Plo  libmpg123_la-stringbuf.Plo  libmpg123_la-synth.Plo  libmpg123_la-synth_8bit.Plo  libmpg123_la-synth_real.Plo  libmpg123_la-synth_s32.Plo  libmpg123_la-tabinit.Plo  synth_stereo_avx_accurate.Plo  synth_stereo_avx_s32.Plo  synth_stereo_x86_64_float.Plo  synth_x86_64_s32.Plo
src/ext_libraries/mpg123-1.32.8/src/libmpg123/.libs/: libmpg123.lai  libmpg123.so.0.48.2
tests/: BMPInputTests.cpp  FilterTests.cpp  FourierTests.cpp  HistogramTests.cpp  MP3InputTests.cpp  MP3OutputTests.cpp  PNGInputTests.cpp  VisualizerTests.cpp  WAVInputTests.cpp
tests/Test_Files/: 60hz_sine_wave.csv  HighFreq.csv  LowFreq.csv  Sine16bit.csv  Sine24bit.csv  Sine32bit.csv  Sine32bitStereo.csv  Sine8bit.csv  SineMono.csv  SineStereo.csv  chessboard_pixel_probabilities.csv  chessboard_pixel_values.csv  gradient_pixel_probabilities.csv  gradient_pixel_values.csv  gradient_test_result.csv  highpass.txt  lowpass.txt  pixel_values.csv  random_normal_64x64_image.csv
(+18 files in other folders)
